--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,46 +20,63 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nebula"
         tools:targetApi="31">
-<!--        <receiver-->
-<!--            android:name=".MyBroadCastReceiver"-->
-<!--            android:allowBackup="true"-->
-<!--            android:directBootAware="true"-->
-<!--            android:enabled="true"-->
-<!--            android:exported="false"/>-->
         <activity
-            android:name=".ZxingCaptureCustomActivity"
+            android:name=".Nebula_login"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Nebula_register"
+            android:exported="false" />
+        <activity
+            android:name=".Nebula_personal_information"
+            android:exported="false" />
+        <activity
+            android:name=".On_Boarding_2"
+            android:exported="false" />
+        <activity
+            android:name=".InstituteID"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity> <!-- <receiver -->
+        <!-- android:name=".MyBroadCastReceiver" -->
+        <!-- android:allowBackup="true" -->
+        <!-- android:directBootAware="true" -->
+        <!-- android:enabled="true" -->
+        <!-- android:exported="false"/> -->
+        <activity
+            android:name=".ZxingCaptureCustomActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             tools:replace="android:screenOrientation" />
+
         <receiver
             android:name=".GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true"
-            android:permission="TODO" >
+            android:permission="TODO">
             <intent-filter>
-                <action android:name="com.google.android.gms.location.intent.action.GEOFENCE_TRANSITION"/>
+                <action android:name="com.google.android.gms.location.intent.action.GEOFENCE_TRANSITION" />
             </intent-filter>
         </receiver>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAvOWOcIy6SJ9rPdugZqGgAf6rvCH_x_zc"/>
-<!--            android:value="AIzaSyDFlHGJ4Lyz5bGDYbLZvMEwRhzftxQIj74"/>-->
-<!--        <service-->
-<!--            android:name=".LocationService"-->
-<!--            android:enabled="true"-->
-<!--            android:exported="false" />-->
+            android:value="AIzaSyAvOWOcIy6SJ9rPdugZqGgAf6rvCH_x_zc" />
     </application>
 
 </manifest>
